--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.15.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
@@ -14,24 +17,25 @@
     "bootswatch": "5.1.3",
     "dotenv": "16.0.1",
     "dotenv-webpack": "7.1.0",
-    "firebase": "^9.9.4",
+    "firebase": "9.9.4",
     "jspdf": "^2.5.1",
     "leaflet": "1.8.0",
     "leaflet-defaulticon-compatibility": "0.1.1",
-    "pdfmake": "^0.2.5",
+    "pdfmake": "0.2.5",
     "process": "0.11.10",
     "react": "18.1.0",
     "react-bootstrap": "2.4.0",
-    "react-datetime-picker": "^3.5.0",
+    "react-datetime-picker": "3.5.0",
     "react-dom": "18.1.0",
     "react-leaflet": "2.7.0",
     "react-redux": "8.0.2",
     "react-router-dom": "5.3.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "2.1.3",
     "react-viewer": "^3.2.2",
     "redux": "4.2.0",
-    "sweetalert2": "^11.4.29",
-    "web-vitals": "^2.1.4"
+    "sweetalert2": "11.4.29",
+    "web-vitals": "2.1.4",
+    "node": "16.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
