--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
     "react-viewer": "^3.2.2",
     "redux": "4.2.0",
     "sweetalert2": "11.4.29",
-    "web-vitals": "2.1.4",
-    "node": "16.15.0"
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
