--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-
   "dependencies": {
+    "@koa/multer": "^3.0.0",
+    "@koa/router": "^12.0.0",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@react-pdf/renderer": "2.3.0",
@@ -17,6 +18,8 @@
     "dotenv-webpack": "7.1.0",
     "firebase": "9.9.4",
     "jspdf": "^2.5.1",
+    "koa": "^2.13.4",
+    "koa-static": "^5.0.0",
     "leaflet": "1.8.0",
     "leaflet-defaulticon-compatibility": "0.1.1",
     "pdfmake": "0.2.5",
