--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@koa/multer": "^3.0.0",
     "@koa/router": "^12.0.0",
     "@material-ui/core": "^4.12.4",
@@ -17,6 +20,7 @@
     "dotenv": "16.0.1",
     "dotenv-webpack": "7.1.0",
     "firebase": "9.9.4",
+    "fortawesome": "^0.0.1-security",
     "jspdf": "^2.5.1",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
@@ -28,12 +32,16 @@
     "react-bootstrap": "2.4.0",
     "react-datetime-picker": "3.5.0",
     "react-dom": "18.1.0",
+    "react-google-maps": "^9.4.5",
     "react-leaflet": "2.7.0",
+    "react-leaflet-locate-control": "^0.1.6",
+    "react-native-elements": "^3.4.2",
     "react-redux": "8.0.2",
     "react-router-dom": "5.3.3",
     "react-scripts": "2.1.3",
     "react-viewer": "^3.2.2",
     "redux": "4.2.0",
+    "responsive-navbar-react": "^1.2.1",
     "sweetalert2": "11.4.29",
     "web-vitals": "2.1.4"
   },
