--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "jspdf": "^2.5.1",
     "koa": "^2.13.4",
     "koa-static": "^5.0.0",
-    "leaflet": "1.8.0",
+    "leaflet": "1.7.1",
     "leaflet-defaulticon-compatibility": "0.1.1",
+    "leaflet-routing-machine": "^3.2.12",
+    "lrm-google": "^1.0.1",
     "pdfmake": "0.2.5",
     "process": "0.11.10",
     "react": "18.1.0",
@@ -33,15 +35,20 @@
     "react-datetime-picker": "3.5.0",
     "react-dom": "18.1.0",
     "react-google-maps": "^9.4.5",
+    "react-grid-layout": "^1.3.4",
+    "react-grid-system": "^8.1.6",
+    "react-icons": "^4.6.0",
     "react-leaflet": "2.7.0",
     "react-leaflet-locate-control": "^0.1.6",
     "react-native-elements": "^3.4.2",
     "react-redux": "8.0.2",
     "react-router-dom": "5.3.3",
     "react-scripts": "2.1.3",
+    "react-super-responsive-table": "^5.2.1",
     "react-viewer": "^3.2.2",
     "redux": "4.2.0",
     "responsive-navbar-react": "^1.2.1",
+    "rsuite": "^5.19.1",
     "sweetalert2": "11.4.29",
     "web-vitals": "2.1.4"
   },
