--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # REACT_APP_API=http://localhost:5000/
+REACT_APP_API=https://localhost:80/
 
 # REACT_APP_API=http://localhost:80/
 
 
-REACT_APP_API=http://34.125.147.49:80
+#REACT_APP_API=http://34.125.147.49:80
